ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-03-13 Benedikt Heintel
	- SETUP:
		* Fixed #1106: BSDmakefile Setup not copy some of its file
		* Updated: a lot of Makefiles
	- DISTS:
		* Fixed #1107: (FreeBSD) fix minor configuration in dist FreeBSD and setup patch
		* Fixed #1108: (FreeBSD) fix minor configuration in dist FreeBSD and setup patch #2

2008-03-12 Christian Hernmarck
	- DISTS:
		* openSuSE (10.3): corrected the INSTALL doc again (!!), and the Makefile for courier...

2008-03-12 Benedikt Heintel
	- CONFIGS:
		* Updated: to latest program versions

2008-03-12 Jochen Manz
	- SETUP:
		* Fixed #1105: Disable proftpd rc in fbsd distro

2008-03-10 Benedikt Heintel
	- DOCS:
		* Updated all INSTALL files

2008-03-10 Christian Hernmarck
	- SETUP:
		* Fixed #1099: 1042 - ispcp-setup compilation errors
		* Fixed #1100: authdaemonrc - wrong content

2008-03-08 Benedikt Heintel
	- ENGINE:
		* Fixed: Error in adding Domain (missing $httpd_gid)
	- LANGAUGES:
		* Updated: Hungarian
	- DISTS:
		* Fixed #1089: (freeBSD) delete doble copy of apache conf in freebsd
		* Fixed #1090: (freeBSD) modified install docu in fbsd
		* Fixed #1091: (freeBSD) fix conf fbsd in courier
		* Fixed #1092: (freeBSD) fix conf fbsd in proftpd

2008-03-07 Benedikt Heintel
	- DOCS:
		* Fixed #1082: Packages list debian lenny
	- ENGINE
		* Fixed #1086: Errors during installation
		* Fixed: 'null' problem in strict perl
	- LANGUAGES:
		* Updated: Russian (thanks to Grundik)
	- SETUP:
		* Updated: Update script; Update to RC3
		* Updated: Update script; Update to RC4
		* Fixed #1087: ispcp_rc4 setup vs courier
		* Fixed #1088: ispcp_rc4 setup vs courier again
		* Changed: make directory to /tmp/ispcp

2008-03-04 Benedikt Heintel
	- SETUP:
		* Fixed #824: IMAP SSL Traffic not counted
		* Fixed #1075: ispcp-update fails when upgrading from RC2
		* Updated: Update script; Update to RC3
	- DISTS:
		* Fixed #1074: (opensuse) config Dists opensuse - wrong makefile
