@@ -3,6 +3,8 @@ ispCP ω 1.0.0 Changelog
 
 2008-03-13 Benedikt Heintel
 	- SETUP:
+		* Fixed #942: ERROR: Undefined intput data, bt: |{PHP_VERSION}|, et: |{PHP_VERSION}|, src !
+		* Fixed #1097: (quick fix) ispcp-vrl-traff-correction generates high load on mysql db -> DB locked
 		* Fixed #1106: BSDmakefile Setup not copy some of its file
 		* Updated: a lot of Makefiles
 	- DISTS:
